[tool.poetry]
name = "harfang_lab"
version = "0.1.0"
description = ""
authors = ["Pablo Abril <pabril@student.42.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
pymongo = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
